--- a/modeldoc.tex
+++ b/modeldoc.tex
@@ -48,37 +48,37 @@ This document describes the models used to forecast ecological predictions for t
 \section{Current Models}
 \label{sec:currmods}
 
-\subsection{Na\"{i}ve 1}
-\label{subsec:currmods_naive01}
+The Portal rodent data are currently forecast using four models: ESSS, AutoArima, nbGARCH, and pevGARCH, each of which is explained below. Three of the four models (ESSS, nbGARCH, and pevGARCH) assume evenly-spaced sampling of the time series, yet the rodents were not censused on 16.5\% new moons. To facilitate comparison among the models, we therefore treated all four of them as if they required evenly-spaced observations, and interpolated missing data (using simple linear interpolation) prior to analyses. 
 
-"Na\"{i}ve 1" is a flexible exponential smoothing state space (ESSS) model \citep{Hyndman2008} fit to the data at the composite (site) spatial level and the composite (community) ecological level. The model is selected and fitted using the \code{ets} and \code{forecast} functions in the \textbf{forecast} package \citep{Hyndman2017} with the \code{allow.multiplicative.trend} argument set to \code{TRUE} and the \code{naive01} function in our \textbf{portalPredictions} package \citep{PortalPredictions}. ESSS models fit using \code{ets} implement what is known as the "innovations" approach to state space modeling, which assumes a single source of noise that is equivalent for the process and observation errors \citep{Hyndman2008}.
+\subsection{ESSS}
+\label{subsec:currmods_esss}
 
-ESSS models are defined according to three model structure parameters: error type, trend type, and seasonality type \citep{Hyndman2008}. Each of the parameters can be an N (none), A (additive), or M (multiplicative) state \citep{Hyndman2008}. "Na\"{i}ve 1" is fit flexibly, such that the model parameters can vary from fit to fit.
+ESSS is a flexible exponential smoothing state space model \citep{Hyndman2008} fit to the data at the composite (site) spatial level and the composite (community) ecological level. The model is selected and fitted using the \code{ets} and \code{forecast} functions in the \textbf{forecast} package \citep{Hyndman2017} with the \code{allow.multiplicative.trend} argument set to \code{TRUE} and the \code{forecast\_esss} function in our \textbf{portalPredictions} package \citep{PortalPredictions}. Models fit using \code{ets} implement what is known as the "innovations" approach to state space modeling, which assumes a single source of noise that is equivalent for the process and observation errors \citep{Hyndman2008}.
 
-\subsection{Na\"{i}ve 2}
-\label{subsec:currmods_naive02}
+In general, ESSS models are defined according to three model structure parameters: error type, trend type, and seasonality type \citep{Hyndman2008}. Each of the parameters can be an N (none), A (additive), or M (multiplicative) state \citep{Hyndman2008}. However, because of the difference in period between seasonality and sampling of the Portal rodents combined with the hard-coded single period of the \code{ets} function, we could not include the seasonal components to the ESSS model. ESSS is fit flexibly, such that the model parameters can vary from fit to fit.
 
-"Na\"{i}ve 2" is a flexible Auto-Regressive Integrated Moving Average (ARIMA) model fit to the data at the composite (site) spatial level and the composite (community) ecological level. The model is selected and fitted using the \code{auto.arima} (with the \code{lambda} argument set to 0) and \code{forecast} functions in the \textbf{forecast} package \citep{Hyndman2013, Hyndman2017} and the \code{naive02} function in our \textbf{portalPredictions} package \citep{PortalPredictions}.
+\subsection{AutoArima}
+\label{subsec:currmods_aa}
 
-ARIMA models are defined according to three model structure parameters: the number of autoregressive terms (p), the degree of differencing (d), and the order of the moving average (q), and are represented as ARIMA(p, q, q) \citep{Box1970}. "Na\"{i}ve 2" is fit flexibly, such that the model parameters can vary from fit to fit.
+AutoArima is a flexible Auto-Regressive Integrated Moving Average (ARIMA) model fit to the data at the composite (site) spatial level and the composite (community) ecological level. The model is selected and fitted using the \code{auto.arima} (with the \code{lambda} argument set to 0) and \code{forecast} functions in the \textbf{forecast} package \citep{Hyndman2013, Hyndman2017} and the \code{forecast\_autoarima} function in our \textbf{portalPredictions} package \citep{PortalPredictions}.
 
-\subsection{Negative Binomial TS}
-\label{subsec:currmods_nbts}
+Generally, ARIMA models are defined according to three model structure parameters: the number of autoregressive terms (p), the degree of differencing (d), and the order of the moving average (q), and are represented as ARIMA(p, q, q) \citep{Box1970}. While the \code{auto.arima} function allows for seasonal models, the seasonality is hard-coded to be on the same period as the sampling, which is not the case for the Portal rodent surveys. As a result, no seasonal models were evaluated. AutoArima is fit flexibly, such that the model parameters can vary from fit to fit.
 
-"Negative Binomial TS" (NBTS) is a generalized autoregressive conditional heteroskedasticity (GARCH) model with overdispersion fit to the data at the composite (site) spatial level and the articulated (species) ecological level. The model for each species is selected and fitted using the \code{tsglm} function in the \textbf{tscount} package \citep{Liboschik2017a} and the \code{neg\_binom\_ts} function in our \textbf{portalPredictions} package \citep{PortalPredictions}.
+\subsection{nbGARCH}
+\label{subsec:currmods_nbgarch}
 
-GARCH models are generalized ARMA models and are defined according to their link function, response distribution, and two model structure parameters: the number of autoregressive terms (p) and the order of the moving average (q), and are represented as GARCH(p, q) \citep{Liboschik2017a}. The NBTS model is fit using the log link and a negative binomial response (modeled as an over-dispersed Poisson), as well as with p = 1 (first-order autoregression) and q = 12 (yearly moving average).
+nbGARCH is a generalized autoregressive conditional heteroskedasticity (GARCH) model with overdispersion (\emph{i.e.}, a negative binomial response) fit to the data at the composite (site) spatial level and both the composite (community) and the articulated (species) ecological levels. The model for each species and the community total is selected and fitted using the \code{tsglm} function in the \textbf{tscount} package \citep{Liboschik2017a} and the \code{forecast\_nbgarch} function in our \textbf{portalPredictions} package \citep{PortalPredictions}.
+
+GARCH models are generalized ARMA models and are defined according to their link function, response distribution, and two model structure parameters: the number of autoregressive terms (p) and the order of the moving average (q), and are represented as GARCH(p, q) \citep{Liboschik2017a}. The nbGARCH model is fit using the log link and a negative binomial response (modeled as an over-dispersed Poisson), as well as with p = 1 (first-order autoregression) and q = 12 (approximately yearly moving average).
 
 The \code{tsglm} function in the \textbf{tscount} package \citep{Liboschik2017a} uses a (conditional) quasi-likelihood based approach to inference and models the overdispersion as an additional parameter in a two-step approach. This two-stage approach has only been minimally evaluated, although preliminary simulation-based studies are promising \citep{Liboschik2017b}.    
 
-Species are fit individually and then summed to produce a composite estimate. 
+\subsection{pevGARCH}
+\label{subsec:currmods_pevgarch}
 
-\subsection{Poisson Environmental TS}
-\label{subsec:currmods_pevts}
+pevGARCH is a generalized autoregressive conditional heteroskedasticity (GARCH) model fit to the data at the composite (site) spatial level and both the composite (community) and the articulated (species) ecological levels. The response variable is Poisson, and a variety of environmental variables are considered as covariates. The model for each species is selected and fitted using the \code{tsglm} function in the \textbf{tscount} package \citep{Liboschik2017a} and the \code{forecast\_pevgarch} function in our \textbf{portalPredictions} package \citep{PortalPredictions}.
 
-"Poisson Environmental TS" (PETS) is a generalized autoregressive conditional heteroskedasticity (GARCH) model fit to the data at the composite (site) spatial level and the articulated (species) ecological level. The model for each species is selected and fitted using the \code{tsglm} function in the \textbf{tscount} package \citep{Liboschik2017a} and the \code{pois\_env\_ts} function in our \textbf{portalPredictions} package \citep{PortalPredictions}.
-
-GARCH models are generalized ARMA models and are defined according to their link function, response distribution, and two model structure parameters: the number of autoregressive terms (p) and the order of the moving average (q), and are represented as GARCH(p, q) \citep{Liboschik2017a}. The PETS model is fit using the log link and a Poisson response, as well as with p = 1 (first-order autoregression) and q = 12 (yearly moving average). The environmental variables potentially includes in the model are min, mean, and max temperatures, precipiation, and NDVI. 
+GARCH models are generalized ARMA models and are defined according to their link function, response distribution, and two model structure parameters: the number of autoregressive terms (p) and the order of the moving average (q), and are represented as GARCH(p, q) \citep{Liboschik2017a}. The PETS model is fit using the log link and a Poisson response, as well as with p = 1 (first-order autoregression) and q = 12 (yearly moving average). The environmental variables potentially included in the model are min, mean, and max temperatures, precipitation, and NDVI. 
 
 The \code{tsglm} function in the \textbf{tscount} package \citep{Liboschik2017a} uses a (conditional) quasi-likelihood based approach to inference. This approach has only been minimally evaluated for models with covariates, although preliminary simulation-based studies are promising \citep{Liboschik2017b}.  
 
@@ -94,9 +94,10 @@ Each species is fit using the following (nonexhaustive) sets of the environmenta
 \item mean temp
 \item precipitation 
 \item NDVI
+\item -none-
 \end{itemize}
 
-Currently, there is no intercept-only model included. The single best model of the 10 is selected based on AIC. Species are fit individually and then summed to produce a composite estimate. 
+The final model is an intercept-only model. The single best model of the 11 is selected based on AIC. 
 
 \section{Developing Model Framework}
 \label{sec:devmods}
